cleancode and frontend bugfix
