# backend/src/utils/swagger/swagger.json
@@ -562,6 +562,47 @@
         ]
       }
     },
+    "/api/additionals/messages": {
+      "put": {
+        "tags": ["Additionals"],
+        "summary": "Unsets user's messages",
+        "description": "",
+        "operationId": "unsetmess",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful"
+          }
+        }
+      }
+    },
+    "/api/additionals/messages/isMessage": {
+      "get": {
+        "tags": ["Additionals"],
+        "summary": "Returns boolean that user has new message",
+        "description": "",
+        "operationId": "isMessage",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Successful",
+            "schema": {
+              "$ref": "#/definitions/isMessage"
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/api/currency": {
       "get": {
         "tags": ["Currency"],
@@ -815,6 +856,18 @@
           "type": "boolean"
         },
         "notificationCount": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "isMessage": {
+      "type": "object",
+      "properties": {
+        "isMessage": {
+          "type": "boolean"
+        },
+        "messageCount": {
           "type": "integer",
           "format": "int64"
         }
